# matgen_baselines

./: CITATION.cff  README.md  assess_mp_novelty.py  calc_decomp.py  cgcnn_setup.py  config.json  generate.py  pyproject.toml
generative_models/CDVAE/: README.md  config.json  env.yml  generate_cdvae.py
generative_models/CrystaLLM/: README.md  download_pretrained.py  environment.yml
generative_models/FTCP/: README.md  config.json  data.py  download_pretrained.py  environment.yml  generate_ftcp.py  model.py  sampling.py  utils.py
generative_models/MatterGen/: README.md  download_pretrained.py
matgen_baselines/analysis/: cgcnn_predict.py  ion_exchange.py  ml_filtration.py  random_enum.py
matgen_baselines/data/: element_energies.json  element_oxidation_states.json  mp_formation_energies.json  prototypes.json
matgen_baselines/utils/: helpers.py
sample_configs/Band-Gap/: Ion-Exchange.json  Random_CHGNet-Filtered.json
sample_configs/Bulk-Modulus/: Ion-Exchange.json  Random_CHGNet-Filtered.json
sample_configs/Stability/: Ion-Exchange.json  Ion-Exchange_CHGNet-Filtered.json  Random.json  Random_CHGNet-Filtered.json
sample_structures/: CDVAE.csv  CrystaLLM.csv  FTCP.csv  Ion-Exchange.csv  MatterGen.csv  Random.csv
sample_structures/Band-Gap/: CGCNN.csv  FTCP.csv  Ion-Exchange.csv  Random.csv
sample_structures/Bulk-Modulus/: CGCNN.csv  FTCP.csv  Ion-Exchange.csv  Random.csv
sample_structures/CDVAE/: Ac2AgAu_8.cif  Ac2GeIr_1.cif  AcAlC_1.cif  AcSn_25.cif  AcY2_2.cif  Ag2Sn_10.cif  AgHg3Br4_1.cif  AgPb2Br3O2_1.cif  AgPd_74.cif  AgSe2_2.cif  Al2CoIr_123.cif  Al2HgO3F_1.cif  Al2Pd_65.cif  Al2Se3_1.cif  Al6Ni5Ir_2.cif  AlTlIn2_1.cif  Ba2Al2AgS5_1.cif  Ba2BrF2_1.cif  Ba2Ga2Br6N_1.cif  Ba2MgAl3O7_1.cif  Ba2Na2Be2Ir_1.cif  Ba2SiSnO4_10.cif  Ba2TbRuO6_1.cif  Ba3In3SnSe2O5_1.cif  Ba3MgCd3S7_1.cif  Ba3NaCa2SnSbN2_1.cif  (+452 more)
(+9637 files in other folders)
