[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matgen_baselines"
version = "0.1.0"
description = "A package for generating and analyzing materials structures."
authors = [
    { name = "Nathan Szymanski", email = "nszymans@umn.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pymatgen>=2024.1.0",
    "chgnet>=0.3.0",
    "mp-api>=0.37.4",
    "numpy>=1.20.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    # CGCNN is not on PyPI, needs to be installed separately
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["matgen_baselines"]
include-package-data = true

[tool.setuptools.package-data]
matgen_baselines = [
    "data/*.json",
    "analysis/pre-trained/*.pth.tar",
    "analysis/pre-trained/*.json"
]

[project.urls]
"Homepage" = "https://github.umn.edu/bartel-group/matgen_baselines"
"Bug Tracker" = "https://github.umn.edu/bartel-group/matgen_baselines/issues"

[project.scripts]
matgen = "matgen_baselines.generate:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
